# gir

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/gir/: Cargo.toml  build.rs
crates/gir-affine/: Cargo.toml
crates/gir-affine/src/: constraint.rs  expr.rs  lib.rs  solver.rs
crates/gir-affine/tests/: integration.rs
crates/gir/proto/: onnx.proto3
crates/gir/src/: attr.rs  builder.rs  data.rs  dim.rs  dtype.rs  graph.rs  infer.rs  lib.rs  node.rs  op.rs  shape.rs  value.rs  verify.rs
crates/gir/src/onnx/: mod.rs  parser.rs
crates/gir/tests/: generate_fixtures.py  onnx_integration.rs
