[package]
name = "gir"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
onnx = ["dep:prost"]

[dependencies]
gir-affine = { path = "../gir-affine" }
prost = { version = "0.13", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
prost-build = { version = "0.13" }

[dev-dependencies]
prost = { version = "0.13" }

[lints]
workspace = true
